--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "social-media-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://erickleaopm.github.io/social-media-dashboard",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
